--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.2.10
   firebase_database: ^10.0.15
+  google_sign_in: ^6.0.2
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+ 
  
 
 # For information on the generic Dart part of this file, see the
